--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
         <li>Microprocessors and Microcontrollers</li>
         <li>Probability and Statistics</li>
     </ul>
-
+    <hr>
+    <footer>
+        <h3 class="reg">Contact</h3>
+        <ul type="circle">
+            <li>Phone Number: 933627XXXX</li>
+            <li>Email ID: aishanisingh**gmail.com</li>
+        </ul>
+    </footer>
 </body>
 </html>
+
